fix hidden pic on ios

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -28,5 +28,4 @@ html, body {
     position: absolute;
     top: 0;
     left: 0;
-    left: 100%;
 }
